Add configuration for youtube-api

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "alexa-app": "^4.2.2",
+    "mz": "^2.7.0",
     "node-fetch": "^2.2.0",
     "youtube-api": "^2.0.9"
   },
   "devDependencies": {
+    "@types/mz": "^0.0.32",
     "@types/node-fetch": "^2.1.2",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
