--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "alexa-app": "^4.2.2",
     "express": "^4.16.3",
+    "morgan": "^1.9.1",
     "mz": "^2.7.0",
     "node-fetch": "^2.2.0",
+    "winston": "^3.1.0",
     "youtube-api": "^2.0.9"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/morgan": "^1.7.35",
     "@types/mz": "^0.0.32",
     "@types/node-fetch": "^2.1.2",
     "tslint": "^5.11.0",
