--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Alexa skill for Next House 2-East.",
   "main": "index.js",
   "scripts": {
+    "build": "./node_modules/.bin/tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael William Le Nguyen (ttpcodes)",
